--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,66 @@
 // src/styles/global.scss
-@import "./variables";
+@use "./mixins" as *;
+@use "./variables" as *;
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+hr {
+  width: 100%;
+  height: 2px;
+  border: none;
+  color: $dark-border;
+  background: $dark-border;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+  border: none;
+  outline: none;
+}
+
+input {
+  outline: 2px solid $dark-border;
+  padding: 0.8em;
+  background: $dark-primary;
+  border: none;
+  border-radius: 4px;
+  color: $dark-white;
+}
 
 body {
+  @include center();
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
   background: var(--bg-color);
   color: var(--text-color);
   font-family: Inter, sans-serif;
-  transition: background 0.3s ease, color 0.3s ease;
+  transition:
+    background 0.3s ease,
+    color 0.3s ease;
 }
