--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -1,14 +1,24 @@
-@mixin theme($bg-color, $text-color) {
-  background-color: $bg-color;
-  color: $text-color;
-}
-
 // Светлая тема
 .light-theme {
-  @include theme($light-bg, $light-text);
+  @include theme(
+    $light-bg $light-text $dark-transparent $light-primary $light-button
+      $light-border $light-skeleton $light-loader $light-corral $light-accent
+  );
 }
 
 // Тёмная тема
 .dark-theme {
-  @include theme($dark-bg, $dark-text);
+  @include theme(
+    $dark-bg $dark-text $dark-transparent $dark-primary $dark-button
+      $dark-border $dark-skeleton $dark-loader $dark-corral $dark-accent
+  );
+}
+
+// Тёмная тема
+.stalker-theme {
+  @include theme(
+    $stalker-bg $stalker-text $stalker-transparent $stalker-primary
+      $stalker-button $stalker-border $stalker-skeleton $stalker-loader
+      $stalker-corral $stalker-accent
+  );
 }
