--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,8 +14,8 @@ hr {
   width: 100%;
   height: 2px;
   border: none;
-  color: $dark-border;
-  background: $dark-border;
+  color: var(--border);
+  background: var(--border);
   margin-top: 1em;
   margin-bottom: 1em;
 }
@@ -44,12 +44,12 @@ select {
 }
 
 input {
-  outline: 2px solid $dark-border;
+  outline: 2px solid var(--border);
   padding: 0.8em;
-  background: $dark-primary;
+  background: var(--primary);
   border: none;
   border-radius: 4px;
-  color: $dark-white;
+  color: var(--accent);
 }
 
 body {
@@ -57,8 +57,8 @@ body {
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
-  background: var(--bg-color);
-  color: var(--text-color);
+  background: var(--bg);
+  color: var(--text);
   font-family: Inter, sans-serif;
   transition:
     background 0.3s ease,
